	PR tree-optimization/57083 	* tree-vrp.c (extract_range_from_binary_expr_1): For LSHIFT_EXPR with 	non-singleton shift count range, zero extend low_bound for uns case.

* gcc.dg/torture/pr57083.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@198388 138bc75d-0d04-0410-961f-82ee72b054a4